# swagger.yaml
@@ -339,6 +339,29 @@ paths:
           required: true
           type: string
 
+  /images/{id}/{width}.jpg/base64:
+    get:
+      summary: Get specific image with id base64 encoded
+      operationId: app.get_image_base64
+      produces:
+        - image/jpeg;
+      responses:
+        200:
+          description: Ok
+        404:
+          description: Not found
+      parameters:
+        - name: id
+          in: path
+          description: Id of image to get.
+          required: true
+          type: string
+        - name: width
+          in: path
+          description: Width of image in pixels or "thumb" for default thumbnail size (256 pixels wide), "full" for default fullscreen size (1024 pixels wide) or "original" for the originaly upladed image.
+          required: true
+          type: string
+
 definitions:
   Event:
     type: object
